@@ -27,7 +27,8 @@ from the command line in the target directory in which you are working.
   <tr>
     <td valign="top">startDate</td>
     <td valign="top">The earliest date from which diffs are to be
-     included in the report.</td>
+     included in the report.<br/>
+     accepts all formats accepted by the cvs command for -D date_spec arguments</td>
   </tr>
   <tr>
     <td valign="top">endTag</td>
@@ -38,7 +39,8 @@ from the command line in the target directory in which you are working.
   <tr>
     <td valign="top">endDate</td>
     <td valign="top">The latest date from which diffs are to be
-     included in the report.</td>
+     included in the report.<br/>
+     accepts all formats accepted by the cvs command for -D date_spec arguments</td>
   </tr>
   <tr>
     <td valign="top">destfile</td>
